[tool.poetry]
name = "some2501"
version = "0.1.0"
description = "A blog system based on Django"
authors = ["Richard Yao <2501.owlsome@gmail.com>"]
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.4"
jieba = "^0.42.1"
Markdown = "^3.3.3"
django-haystack = "^3.1.1"
Whoosh = "^2.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
